MDEV-27016: Assertion 'id.page_no() < space.size' failed

buf_flush_check_neighbors(): Relax a debug assertion that
could fail for the very last page(s) of a ROW_FORMAT=COMPRESSED tables          using a 1024-byte or 2048-byte page size.

This assertion started to fail after
commit d09426f9e60fd93296464ec9eb5f9d85566437d3 (MDEV-26537)
modified the .ibd file extension to occur in steps of 4096 bytes.